# BUAA_Missiles_and_Rockets_Aerodynamics

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: cfd_differentials.h  cfd_util.h  constants.h
scripts/: fourier_piston.py  plot_field_xt.py  plot_pres0.py
source/: cfd_differentials.c  cfd_util.c  main.c
vispy/: visualizations.py
